d3web-KnowWE/d3web-KnOfficeParser/src/main/antlr/VisioParser.java
// $ANTLR 3.1.1 D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g 2010-03-23 14:24:36

package de.d3web.KnOfficeParser.visio;
import de.d3web.KnOfficeParser.ParserErrorHandler;
import de.d3web.KnOfficeParser.ConditionBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/** 
 * Grammatik zum Einlesen von Visiofiles und ueberfuehren selbiger 
 * in die Standard ANTLR-Baumrepraesenation
 * @author Markus Friedrich
 *
 */
public class VisioParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "String", "INT", "DOT", "DD", "COMMA", "SEMI", "EX", "AT", "ORS", "NS", "TILDE", "LP", "RP", "CBO", "CBC", "SBO", "SBC", "LE", "L", "GE", "G", "EQ", "PLUS", "MINUS", "PROD", "DIV", "WS", "COMMENT", "NL", "IF", "THEN", "AND", "OR", "NOT", "HIDE", "EXCEPT", "UNKNOWN", "KNOWN", "INSTANT", "MINMAX", "IN", "INTER", "ALL", "ALLOWEDNAMES", "INCLUDE", "DEFAULT", "INIT", "ABSTRACT", "SET", "REF", "FUZZY", "DIVTEXT", "DIVNORM", "ID", "Page", "Shape", "Xcoord", "Ycoord", "Width", "Height", "Text", "MyDouble", "Shapetext", "Picture", "Box", "QID", "Textboxtext", "Popup", "Aidtext", "Knowledge", "Start", "End", "Pagestart", "Pagesheet", "Shapestart", "YtoWith", "HeighttoText", "Misc", "Misc2", "Misc3", "'</Pages>'", "'</Page>'", "'<Shapes>'", "'</Shapes>'", "'</PinX>'", "'<PinY>'", "'</Width>'", "'<Height>'", "'</Text></Shape>'", "'Bildname:'", "'Groesse:'", "'x'", "'Frage:'", "'Folgefragen:'"
    };
    public static final int Aidtext=72;
    public static final int LP=15;
    public static final int FUZZY=54;
    public static final int Textboxtext=70;
    public static final int NOT=37;
    public static final int Page=58;
    public static final int EXCEPT=39;
    public static final int DD=7;
    public static final int EOF=-1;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__90=90;
    public static final int EX=10;
    public static final int INCLUDE=48;
    public static final int NL=32;
    public static final int EQ=25;
    public static final int COMMENT=31;
    public static final int T__97=97;
    public static final int Shapestart=78;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int GE=23;
    public static final int G=24;
    public static final int SBC=20;
    public static final int L=22;
    public static final int NS=13;
    public static final int KNOWN=41;
    public static final int INT=5;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int Picture=67;
    public static final int Xcoord=60;
    public static final int WS=30;
    public static final int OR=36;
    public static final int SBO=19;
    public static final int Misc2=82;
    public static final int Misc3=83;
    public static final int Popup=71;
    public static final int YtoWith=79;
    public static final int INIT=50;
    public static final int End=75;
    public static final int Ycoord=61;
    public static final int Shapetext=66;
    public static final int HIDE=38;
    public static final int RP=16;
    public static final int ORS=12;
    public static final int MyDouble=65;
    public static final int ABSTRACT=51;
    public static final int AND=35;
    public static final int ID=57;
    public static final int Width=62;
    public static final int IF=33;
    public static final int AT=11;
    public static final int THEN=34;
    public static final int IN=44;
    public static final int UNKNOWN=40;
    public static final int COMMA=8;
    public static final int Height=63;
    public static final int ALL=46;
    public static final int PROD=28;
    public static final int Knowledge=73;
    public static final int TILDE=14;
    public static final int PLUS=26;
    public static final int String=4;
    public static final int DOT=6;
    public static final int HeighttoText=80;
    public static final int Start=74;
    public static final int Pagesheet=77;
    public static final int Misc=81;
    public static final int ALLOWEDNAMES=47;
    public static final int INSTANT=42;
    public static final int MINMAX=43;
    public static final int DEFAULT=49;
    public static final int INTER=45;
    public static final int SET=52;
    public static final int MINUS=27;
    public static final int DIVNORM=56;
    public static final int SEMI=9;
    public static final int REF=53;
    public static final int QID=69;
    public static final int Box=68;
    public static final int CBC=18;
    public static final int Shape=59;
    public static final int Text=64;
    public static final int DIVTEXT=55;
    public static final int DIV=29;
    public static final int CBO=17;
    public static final int LE=21;
    public static final int Pagestart=76;

    // delegates
    public Visio_BasicParser gBasicParser;
    // delegators


        public VisioParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public VisioParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            gBasicParser = new Visio_BasicParser(input, state, this);         
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
        gBasicParser.setTreeAdaptor(this.adaptor);
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return VisioParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g"; }


      private ParserErrorHandler eh;
      
      public VisioParser(CommonTokenStream tokens, ParserErrorHandler eh) {
        this(tokens);
        this.eh=eh;
        gBasicParser.setEH(eh);
        if (eh!=null) eh.setTokenNames(tokenNames);
      }
      
      @Override
      public void reportError(RecognitionException re) {
        if (eh!=null) {
          eh.parsererror(re);
        } else {
          super.reportError(re);
        }
      }


    public static class knowledge_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "knowledge"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:1: knowledge : Start ( page )* '</Pages>' End -> ^( Knowledge ( page )* ) ;
    public final VisioParser.knowledge_return knowledge() throws RecognitionException {
        VisioParser.knowledge_return retval = new VisioParser.knowledge_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Start1=null;
        Token string_literal3=null;
        Token End4=null;
        VisioParser.page_return page2 = null;


        Object Start1_tree=null;
        Object string_literal3_tree=null;
        Object End4_tree=null;
        RewriteRuleTokenStream stream_End=new RewriteRuleTokenStream(adaptor,"token End");
        RewriteRuleTokenStream stream_Start=new RewriteRuleTokenStream(adaptor,"token Start");
        RewriteRuleTokenStream stream_84=new RewriteRuleTokenStream(adaptor,"token 84");
        RewriteRuleSubtreeStream stream_page=new RewriteRuleSubtreeStream(adaptor,"rule page");
        try {
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:11: ( Start ( page )* '</Pages>' End -> ^( Knowledge ( page )* ) )
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:13: Start ( page )* '</Pages>' End
            {
            Start1=(Token)match(input,Start,FOLLOW_Start_in_knowledge153);  
            stream_Start.add(Start1);

            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:20: ( page )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Pagestart) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:20: page
            	    {
            	    pushFollow(FOLLOW_page_in_knowledge156);
            	    page2=page();

            	    state._fsp--;

            	    stream_page.add(page2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            string_literal3=(Token)match(input,84,FOLLOW_84_in_knowledge159);  
            stream_84.add(string_literal3);

            End4=(Token)match(input,End,FOLLOW_End_in_knowledge161);  
            stream_End.add(End4);



            // AST REWRITE
            // elements: page
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 103:41: -> ^( Knowledge ( page )* )
            {
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:44: ^( Knowledge ( page )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Knowledge, "Knowledge"), root_1);

                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:103:56: ( page )*
                while ( stream_page.hasNext() ) {
                    adaptor.addChild(root_1, stream_page.nextTree());

                }
                stream_page.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "knowledge"

    public static class page_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "page"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:104:1: page : Pagestart Pagesheet shapes '</Page>' -> ^( Page shapes ) ;
    public final VisioParser.page_return page() throws RecognitionException {
        VisioParser.page_return retval = new VisioParser.page_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Pagestart5=null;
        Token Pagesheet6=null;
        Token string_literal8=null;
        VisioParser.shapes_return shapes7 = null;


        Object Pagestart5_tree=null;
        Object Pagesheet6_tree=null;
        Object string_literal8_tree=null;
        RewriteRuleTokenStream stream_Pagesheet=new RewriteRuleTokenStream(adaptor,"token Pagesheet");
        RewriteRuleTokenStream stream_Pagestart=new RewriteRuleTokenStream(adaptor,"token Pagestart");
        RewriteRuleTokenStream stream_85=new RewriteRuleTokenStream(adaptor,"token 85");
        RewriteRuleSubtreeStream stream_shapes=new RewriteRuleSubtreeStream(adaptor,"rule shapes");
        try {
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:104:5: ( Pagestart Pagesheet shapes '</Page>' -> ^( Page shapes ) )
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:104:7: Pagestart Pagesheet shapes '</Page>'
            {
            Pagestart5=(Token)match(input,Pagestart,FOLLOW_Pagestart_in_page176);  
            stream_Pagestart.add(Pagestart5);

            Pagesheet6=(Token)match(input,Pagesheet,FOLLOW_Pagesheet_in_page178);  
            stream_Pagesheet.add(Pagesheet6);

            pushFollow(FOLLOW_shapes_in_page180);
            shapes7=shapes();

            state._fsp--;

            stream_shapes.add(shapes7.getTree());
            string_literal8=(Token)match(input,85,FOLLOW_85_in_page182);  
            stream_85.add(string_literal8);



            // AST REWRITE
            // elements: shapes
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 104:44: -> ^( Page shapes )
            {
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:104:47: ^( Page shapes )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Page, "Page"), root_1);

                adaptor.addChild(root_1, stream_shapes.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "page"

    public static class shapes_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "shapes"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:1: shapes : '<Shapes>' (pic+= picture | shape | tex+= textbox )* '</Shapes>' {...}? -> ( textbox )* ( picture )* ( shape )* ;
    public final VisioParser.shapes_return shapes() throws RecognitionException {
        VisioParser.shapes_return retval = new VisioParser.shapes_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal9=null;
        Token string_literal11=null;
        List list_pic=null;
        List list_tex=null;
        VisioParser.shape_return shape10 = null;

        RuleReturnScope pic = null;
        RuleReturnScope tex = null;
        Object string_literal9_tree=null;
        Object string_literal11_tree=null;
        RewriteRuleTokenStream stream_86=new RewriteRuleTokenStream(adaptor,"token 86");
        RewriteRuleTokenStream stream_87=new RewriteRuleTokenStream(adaptor,"token 87");
        RewriteRuleSubtreeStream stream_picture=new RewriteRuleSubtreeStream(adaptor,"rule picture");
        RewriteRuleSubtreeStream stream_textbox=new RewriteRuleSubtreeStream(adaptor,"rule textbox");
        RewriteRuleSubtreeStream stream_shape=new RewriteRuleSubtreeStream(adaptor,"rule shape");
        try {
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:7: ( '<Shapes>' (pic+= picture | shape | tex+= textbox )* '</Shapes>' {...}? -> ( textbox )* ( picture )* ( shape )* )
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:9: '<Shapes>' (pic+= picture | shape | tex+= textbox )* '</Shapes>' {...}?
            {
            string_literal9=(Token)match(input,86,FOLLOW_86_in_shapes196);  
            stream_86.add(string_literal9);

            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:20: (pic+= picture | shape | tex+= textbox )*
            loop2:
            do {
                int alt2=4;
                alt2 = dfa2.predict(input);
                switch (alt2) {
            	case 1 :
            	    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:21: pic+= picture
            	    {
            	    pushFollow(FOLLOW_picture_in_shapes201);
            	    pic=picture();

            	    state._fsp--;

            	    stream_picture.add(pic.getTree());
            	    if (list_pic==null) list_pic=new ArrayList();
            	    list_pic.add(pic.getTree());


            	    }
            	    break;
            	case 2 :
            	    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:34: shape
            	    {
            	    pushFollow(FOLLOW_shape_in_shapes203);
            	    shape10=shape();

            	    state._fsp--;

            	    stream_shape.add(shape10.getTree());

            	    }
            	    break;
            	case 3 :
            	    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:40: tex+= textbox
            	    {
            	    pushFollow(FOLLOW_textbox_in_shapes207);
            	    tex=textbox();

            	    state._fsp--;

            	    stream_textbox.add(tex.getTree());
            	    if (list_tex==null) list_tex=new ArrayList();
            	    list_tex.add(tex.getTree());


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            string_literal11=(Token)match(input,87,FOLLOW_87_in_shapes211);  
            stream_87.add(string_literal11);

            if ( !(((list_tex.size()==1)&&(list_pic.size()==1))) ) {
                throw new FailedPredicateException(input, "shapes", "($tex.size()==1)&&($pic.size()==1)");
            }


            // AST REWRITE
            // elements: shape, picture, textbox
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 105:105: -> ( textbox )* ( picture )* ( shape )*
            {
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:108: ( textbox )*
                while ( stream_textbox.hasNext() ) {
                    adaptor.addChild(root_0, stream_textbox.nextTree());

                }
                stream_textbox.reset();
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:117: ( picture )*
                while ( stream_picture.hasNext() ) {
                    adaptor.addChild(root_0, stream_picture.nextTree());

                }
                stream_picture.reset();
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:105:126: ( shape )*
                while ( stream_shape.hasNext() ) {
                    adaptor.addChild(root_0, stream_shape.nextTree());

                }
                stream_shape.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "shapes"

    public static class shape_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "shape"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:106:1: shape : x y width height shapetext -> ^( Shape x y width height shapetext ) ;
    public final VisioParser.shape_return shape() throws RecognitionException {
        VisioParser.shape_return retval = new VisioParser.shape_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        VisioParser.x_return x12 = null;

        VisioParser.y_return y13 = null;

        VisioParser.width_return width14 = null;

        VisioParser.height_return height15 = null;

        VisioParser.shapetext_return shapetext16 = null;


        RewriteRuleSubtreeStream stream_height=new RewriteRuleSubtreeStream(adaptor,"rule height");
        RewriteRuleSubtreeStream stream_shapetext=new RewriteRuleSubtreeStream(adaptor,"rule shapetext");
        RewriteRuleSubtreeStream stream_width=new RewriteRuleSubtreeStream(adaptor,"rule width");
        RewriteRuleSubtreeStream stream_y=new RewriteRuleSubtreeStream(adaptor,"rule y");
        RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x");
        try {
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:106:7: ( x y width height shapetext -> ^( Shape x y width height shapetext ) )
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:106:9: x y width height shapetext
            {
            pushFollow(FOLLOW_x_in_shape231);
            x12=x();

            state._fsp--;

            stream_x.add(x12.getTree());
            pushFollow(FOLLOW_y_in_shape233);
            y13=y();

            state._fsp--;

            stream_y.add(y13.getTree());
            pushFollow(FOLLOW_width_in_shape235);
            width14=width();

            state._fsp--;

            stream_width.add(width14.getTree());
            pushFollow(FOLLOW_height_in_shape237);
            height15=height();

            state._fsp--;

            stream_height.add(height15.getTree());
            pushFollow(FOLLOW_shapetext_in_shape239);
            shapetext16=shapetext();

            state._fsp--;

            stream_shapetext.add(shapetext16.getTree());


            // AST REWRITE
            // elements: width, y, height, shapetext, x
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 106:36: -> ^( Shape x y width height shapetext )
            {
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:106:39: ^( Shape x y width height shapetext )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Shape, "Shape"), root_1);

                adaptor.addChild(root_1, stream_x.nextTree());
                adaptor.addChild(root_1, stream_y.nextTree());
                adaptor.addChild(root_1, stream_width.nextTree());
                adaptor.addChild(root_1, stream_height.nextTree());
                adaptor.addChild(root_1, stream_shapetext.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "shape"

    public static class picture_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "picture"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:107:1: picture : x y width height -> ^( Picture x y width height ) ;
    public final VisioParser.picture_return picture() throws RecognitionException {
        VisioParser.picture_return retval = new VisioParser.picture_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        VisioParser.x_return x17 = null;

        VisioParser.y_return y18 = null;

        VisioParser.width_return width19 = null;

        VisioParser.height_return height20 = null;


        RewriteRuleSubtreeStream stream_height=new RewriteRuleSubtreeStream(adaptor,"rule height");
        RewriteRuleSubtreeStream stream_width=new RewriteRuleSubtreeStream(adaptor,"rule width");
        RewriteRuleSubtreeStream stream_y=new RewriteRuleSubtreeStream(adaptor,"rule y");
        RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x");
        try {
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:107:9: ( x y width height -> ^( Picture x y width height ) )
            // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:107:11: x y width height
            {
            pushFollow(FOLLOW_x_in_picture262);
            x17=x();

            state._fsp--;

            stream_x.add(x17.getTree());
            pushFollow(FOLLOW_y_in_picture264);
            y18=y();

            state._fsp--;

            stream_y.add(y18.getTree());
            pushFollow(FOLLOW_width_in_picture266);
            width19=width();

            state._fsp--;

            stream_width.add(width19.getTree());
            pushFollow(FOLLOW_height_in_picture268);
            height20=height();

            state._fsp--;

            stream_height.add(height20.getTree());


            // AST REWRITE
            // elements: height, y, width, x
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 107:28: -> ^( Picture x y width height )
            {
                // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:107:31: ^( Picture x y width height )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(Picture, "Picture"), root_1);

                adaptor.addChild(root_1, stream_x.nextTree());
                adaptor.addChild(root_1, stream_y.nextTree());
                adaptor.addChild(root_1, stream_width.nextTree());
                adaptor.addChild(root_1, stream_height.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "picture"

    public static class textbox_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "textbox"
    // D:\\eclipse workspaces\\Uni SVN 64bit\\d3web-KnowWE\\d3web-KnOfficeParser\\src\\main\\antlr\\Visio.g:108:1: textbox : x y width height textboxtext -> ^( Box x y width height textboxtext ) ;
    public final VisioParser.textbox_return textbox() throws RecognitionException {
        VisioParser.textbox_return retval = new VisioParser.textbox_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        VisioParser.x_return x21 = null;

        VisioParser.y_return y22 = null;

        VisioParser.width_return width23 = null;

        VisioParser.height_return height24 = null;

        VisioParser.textboxtext_return textboxtext25 = null;


        RewriteRuleSubtreeStream stream_height=new RewriteRuleSubtreeStream(adaptor,"rule height");
        RewriteRuleSubtreeStream stream_width=new RewriteRuleSubtreeStream(adaptor,"rule width");
        RewriteRuleSubtreeStream stream_textboxtext=new RewriteRuleSubtreeStream(adaptor,"rule textboxtext");
        RewriteRuleSubtreeStream stream_y=new RewriteRuleSubtreeStream(adaptor,"rule y");
        RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x");
        try {
